# Erdos

./: .gitignore  Plan.md  README.md  erdos-solver.spec  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
examples/: README.md  basic_algebra.lean  manifest.json  number_theory.lean  test_theorem.lean
gui/: index.html  package.json
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: LogViewer.tsx  SettingsPanel.tsx  SolutionsGallery.tsx
src/: __init__.py  campaign.py  config.py  environment.py  events.py  logging_config.py  manifest.py  packager.py  sandbox.py  solver.py  validator.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini.py  mock.py  ollama_provider.py  openai_provider.py
tests/: __init__.py  test_campaign.py  test_config.py  test_environment.py  test_events.py  test_llm_providers.py  test_manifest.py  test_packager.py  test_solver.py  test_validator.py
