[package]
name = "erdos-prover"
version = "1.0.0"
description = "Erdos Proof Mining System"
authors = ["Erdos Team"]
license = "MIT"
repository = "https://github.com/Cuuper22/Erdos"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
