[package]
name = "erdos-prover"
version = "1.0.0"
description = "Automated Lean 4 proof mining using AI agents"
authors = ["Erdos Team"]
license = "MIT"
repository = "https://github.com/Cuuper22/Erdos"
homepage = "https://github.com/Cuuper22/Erdos"
keywords = ["lean", "theorem-proving", "ai", "formal-verification", "proof-mining"]
categories = ["mathematics", "science"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
